<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="btn_popular_name">POPULAR MOVIES</string>
    <string name="btn_stock_name">STOCK HAWK</string>
    <string name="btn_bigger_name">BUILD IT BIGGER</string>
    <string name="btn_material_name">MAKE YOUR APP MATERIAL</string>
    <string name="btn_ubiquitous_name">GO UBIQUITOUS</string>
    <string name="btn_capstone_name">CAPSTONE</string>
    <string name="toast_message">This button will launch my %1$s app!</string>
</resources>
