<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.quartzo.myappportfolio.MainActivity"
    android:gravity="center_horizontal|center_vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal|center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="My Nanodegree Apps!"
            android:id="@+id/textView2" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_popular_name"
            android:onClick="sendMessage"
            android:id="@+id/button"
            android:textColor="@android:color/white"
            android:background="@color/colorButton"
            android:layout_marginTop="@dimen/components_vertical_margin"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_stock_name"
            android:onClick="sendMessage"
            android:id="@+id/button2"
            android:layout_below="@+id/button"
            android:textColor="@android:color/white"
            android:background="@color/colorButton"
            android:layout_marginTop="@dimen/components_vertical_margin"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="sendMessage"
            android:text="@string/btn_bigger_name"
            android:id="@+id/button3"
            android:textColor="@android:color/white"
            android:background="@color/colorButton"
            android:layout_marginTop="@dimen/components_vertical_margin"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_material_name"
            android:onClick="sendMessage"
            android:id="@+id/button4"
            android:textColor="@android:color/white"
            android:background="@color/colorButton"
            android:layout_marginTop="@dimen/components_vertical_margin"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="sendMessage"
            android:text="@string/btn_ubiquitous_name"
            android:id="@+id/button5"
            android:textColor="@android:color/white"
            android:background="@color/colorButton"
            android:layout_marginTop="@dimen/components_vertical_margin"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="sendMessage"
            android:text="@string/btn_capstone_name"
            android:id="@+id/button6"
            android:textColor="@android:color/white"
            android:background="@color/colorButton"
            android:layout_marginTop="@dimen/components_vertical_margin"/>

    </LinearLayout>

</LinearLayout>
